# datawand

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  Layout.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs
src/components/: FileDrop.tsx  Header.tsx  PipelineHeader.tsx  PipelineStack.tsx  PipelineStepConfiguration.tsx  SourceLibrary.tsx  SourcePicker.tsx  Transform.tsx  TransformationNode.tsx  TransformationsLibrary.tsx
src/logic/: Pipeline.tsx
src/models/: Transformation.tsx  TransformationStep.tsx  TransformationsDefinitions.js
src/stores/: app.ts
